test/arrays/vass/initialization-mapped-1.good
initialization-mapped-1.chpl:8: warning: BlockDom(1,int(64),false,unmanaged DefaultDist)
initialization-mapped-1.chpl:9: warning: BlockDom(1,int(64),false,unmanaged DefaultDist)
initialization-mapped-1.chpl:11: error: done
